# MyCalcProject

./: .gitignore  ReadMe.md  setup_project.sh
MyCalcProject/: CMakeLists.txt
MyCalcProject/Core/: CMakeLists.txt
MyCalcProject/Core/include/: main.h
MyCalcProject/Core/src/: main.cpp
MyCalcProject/modules/Add/: CMakeLists.txt
MyCalcProject/modules/Div/: CMakeLists.txt
MyCalcProject/modules/Div/include/: div.h
MyCalcProject/modules/Div/src/: div.cpp
MyCalcProject/modules/Mul/: CMakeLists.txt
MyCalcProject/modules/Mul/include/: mul.h
MyCalcProject/modules/Sub/: CMakeLists.txt
MyCalcProject/modules/Sub/include/: sub.h
